tests/e2e/semantics/mutation/unnamed_arg.error
Error: syntax error in story at line 1, column 9

1|    b = [0].contains(:1)
              ^^^^^^^^^^^

E0118: Mutation `contains` requires arguments to be named
