tests/e2e/semantics/mutation/unnamed_arg.story
b = [0].contains(:1)
